<resources>
    <string name="apartment_title">Стандартный с видом на бассейн или сад</string>
    <string name="all_inclusive">Все включено</string>
    <string name="conditioner">Кондиционер</string>
    <string name="apartment_detail_info">Подробнее о номере</string>
    <string name="choose_apartment">Выбрать номер</string>
    <string name="back_button_content_description">button back clicked</string>
    <string name="hotel_name_description">Steigenberger Makadi</string>
</resources>