<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardCornerRadius="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="257dp"
            app:iss_auto_cycle="true"
            app:iss_delay="1000"
            app:iss_period="1000"
            app:iss_title_background="@drawable/default_gradient" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apartment_title"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:layout_marginTop="12dp"/>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_inclusive"
                android:textSize="16sp"
                android:background="@drawable/rounded_background"
                android:textColor="@color/gray"
                android:fontFamily="@font/sf_pro_display_medium" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conditioner"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:background="@drawable/rounded_background"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/sf_pro_display_medium"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/chip"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_background"
            android:fontFamily="@font/sf_pro_display_medium"
            android:paddingHorizontal="9dp"
            android:text="@string/apartment_detail_info"
            android:textColor="@color/blue"
            app:icon="@drawable/ic_navigate_next"
            android:textSize="16sp"
            app:cornerRadius="6dp"
            app:iconTint="@color/gold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHotelPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/price_text"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvPriceDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/price_description"
                android:textColor="@color/gray"
                android:textSize="16sp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonChooseApartment"
            android:text="@string/choose_apartment"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/blue"
            android:insetTop="0dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:insetBottom="0dp"
            app:cornerRadius="15dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
